--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,8 @@
 body {
     font-family: "Fira Sans", serif;
     background-color: #f5f5f5;
+    width: 1600px;
+    margin: 0 auto;
 }
 
 /* HEADER */
@@ -33,6 +35,18 @@ nav > ul > li {
     color: #006A50;
 }
 
+.btn {
+    border-radius: 8px;
+    color: rgb(255, 255, 255);
+    font-size: 16px;
+    font-weight: 600;
+    line-height: 19px;
+    text-align: left;
+    padding: 11px 20px 11px 20px;
+    border: none;
+    cursor: pointer;
+}
+
 .primary-btn {
     padding: 17px 34px;
     font-weight: 600;
@@ -42,6 +56,7 @@ nav > ul > li {
     border: 1px solid #006A50;
     color: #fff;
     margin-top: 10px;
+    cursor: pointer;
 }
 .primary-btn:hover {
     padding: 17px 34px;
@@ -51,6 +66,7 @@ nav > ul > li {
     border-radius: 8px;
     border: 1px solid #006A50;
     color: #006A50;
+    cursor: pointer;
 }
 
 .btn-transparent {
@@ -62,6 +78,7 @@ nav > ul > li {
     width: 116px;
     height: 52px;
     border: 1px solid #006A50;
+    cursor: pointer;
 }
 .btn-transparent:hover {
     background-color: #006A50;
@@ -103,4 +120,86 @@ nav > ul > li {
     background-size: cover;
     width: 474.03px;
     height: 329.21px;   
+}
+
+
+/* The Vision of Future Section */
+
+.future-section {
+    margin-top: 80px;
+    margin-bottom: 80px;
+}
+.future-section .future-subtitle {
+    color: rgb(14, 14, 14);
+    font-size: 40px;
+    font-weight: 700;
+    line-height: 48px;
+    text-align: left;
+    margin: 0;
+}
+.future-section .future-description {
+    color: rgba(14, 14, 14, 0.7);
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
+    text-align: left;
+    margin-top: 16px;
+}
+.future-section .future-content-item {
+    display: flex;
+    gap: 24px;
+    flex-direction: row;
+    justify-content: flex-start;
+    padding: 0;
+}
+
+.future-section .future {
+    padding: 32px;
+    border-radius: 16px;
+    margin-top: 16px;
+}
+
+.future-section .bg-future-1 {
+    background: rgba(84, 144, 245, 0.2);
+}
+.future-section .bg-future-2 {
+    background: rgb(198, 228, 214);
+}
+.future-section .bg-future-3 {
+    background: rgb(247, 235, 207);
+}
+
+
+.future-section .btn-future-1 {
+    background: rgb(84, 144, 245);
+}
+.future-section .btn-future-2 {
+    background: rgb(9, 161, 92);
+}
+.future-section .btn-future-3 {
+    background: rgb(255, 194, 57); 
+}
+
+
+.future-section .card-icon {
+    width: 62px;
+    height: 62px;
+}
+
+
+
+
+.future-section .future-title {
+    color: rgba(14, 14, 14, 0.8);
+    font-size: 20px;
+    font-weight: 700;
+    line-height: 24px;
+    text-align: left;
+}
+.future-section .future-description {
+    color: rgba(14, 14, 14, 0.7);
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
+    text-align: left;
 }
