--- a/styles/style.css
+++ b/styles/style.css
@@ -244,3 +244,110 @@ nav > ul > li {
     text-align: left;
     margin-top: 10px;
 }
+
+/* RECENT NEWS */
+.recent-news {
+    margin-bottom: 80px;
+}
+
+.recent-news .blog-content {
+    background-color: #fff;
+    padding: 48px;
+    border-radius: 24px;
+}
+
+.recent-news .news-title {
+    color: rgb(14, 14, 14);
+    font-size: 40px;
+    font-weight: 700;
+    line-height: 48px;
+    text-align: left;
+    margin: 0;
+}
+.recent-news .news-subtitle {
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
+    text-align: left;
+    margin-bottom: 20px;
+}
+
+.recent-news .blog-post-1 {
+    display: flex;
+    align-items: center;
+}
+
+.blog-content .blog-image {
+    width: 408px;
+    height: 306px;
+    flex: none;
+    order: 0;
+    flex-grow: 0;
+    margin: 0px 32px;
+    border-radius: 24px;
+}
+
+.recent-news .recent-news-title {
+    color: rgba(14, 14, 14, 0.8);
+    font-size: 32px;
+    font-weight: 700;
+    line-height: 38px;
+    text-align: left;
+    margin-top: 8px;
+    margin-bottom: 12px;
+}
+.recent-news .blog-content .news-chanel-logo {
+    width: 134px;
+    height: 40px;
+    margin: 0;
+}
+.blog-content .post-date {
+    color: rgba(14, 14, 14, 0.7);
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
+    text-align: left;
+}
+.blog-content .post-description {
+    color: rgba(14, 14, 14, 0.7);
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
+    text-align: left;
+}
+
+.blog-mt {
+    margin-top: 30px;
+}
+
+
+
+
+
+
+/* FOOTER SECTION */ 
+.footer {
+    background-color: #fff;
+    padding-top: 80px;
+    padding-bottom: 80px;
+}
+.footer-title {
+    text-align: center;
+    padding-bottom: 32px;
+    margin: 0px;
+}
+.footer .footer-social-items {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+    margin-right: 50px;
+}
+.footer-content .social-item {
+    list-style-type: none;
+    padding-top: 32px;
+}
+ hr {
+    max-width: 80%;
+    margin: auto;
+ }
