Donate Section Done

--- a/styles/style.css
+++ b/styles/style.css
@@ -320,7 +320,57 @@ nav > ul > li {
     margin-top: 30px;
 }
 
+/* DONATE SECTION */
+.donate {
+    margin-bottom: 80px;
+    text-align: center;
+}
+.donate .donate-title {
+    color: rgb(14, 14, 14);
+    font-size: 40px;
+    font-weight: 700;
+    line-height: 48px;
+    margin: 0;
+}
+.donate .donate-subtitle {
+    color: rgba(14, 14, 14, 0.7);
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
+    width: 1104px;
+    margin: 24px auto 0;
+}
+.donate .donate-price-card {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    gap: 24px;
+    width: 1104px;
+    margin: auto;
+}
+.donate .donate-price-card-item {
+    box-sizing: border-box;
+    border: 1px solid rgba(14, 14, 14, 0.15);
+    border-radius: 16px;
+    background: rgb(255, 255, 255);
+    padding: 40px;
+    margin: 32px 0;
+}
+.donate-price-card-item h2 {
+    color: rgba(14, 14, 14, 0.8);
+    font-family: Fira Sans;
+    font-size: 40px;
+    font-weight: 700;
+    line-height: 48px;
+    letter-spacing: 0%;
+    text-align: left;
+}
 
+.donate button {
+    margin-top: 32px;
+}
+
+.donate .donate-custom-price input[type]
 
 
 
