--- a/styles/style.css
+++ b/styles/style.css
@@ -1,8 +1,6 @@
 body {
     font-family: "Fira Sans", serif;
-    background-color: #f5f5f5;
-    width: 1600px;
-    margin: 0 auto;
+    /* background-color: #f5f5f5; */
 }
 
 /* HEADER */
@@ -10,7 +8,6 @@ body {
     width: 1600px;
     margin: 0 auto;
 }
-
 
 /* NAVIGATION */
 
@@ -33,6 +30,14 @@ nav > ul > li {
 /* PRIMARY STYLE */
 .primary-color {
     color: #006A50;
+}
+
+.body-bg {
+    background-color: #f5f5f5;
+}
+.body-width {
+    width: 1600px;
+    margin: 0 auto;
 }
 
 .btn {
@@ -58,6 +63,7 @@ nav > ul > li {
     margin-top: 10px;
     cursor: pointer;
 }
+
 .primary-btn:hover {
     padding: 17px 34px;
     font-weight: 600;
@@ -88,7 +94,6 @@ nav > ul > li {
 input:focus {
     outline: none;
   }
-
 
 /* BANNER SECTION */
 .banner {
@@ -189,9 +194,6 @@ input:focus {
     width: 62px;
     height: 62px;
 }
-
-
-
 
 .future-section .future-title {
     color: rgba(14, 14, 14, 0.8);
@@ -395,6 +397,23 @@ input:focus {
     background: rgb(255, 255, 255);
 }
 
+.donate .bg-lite-1:hover {
+    background-color: red;
+}
+.donate .bg-lite-2:hover {
+    background-color: #3EA15C
+}
+.donate .bg-lite-3:hover {
+    background-color: rgb(0, 106, 255);
+}
+.donate .bg-lite-4:hover {
+    background-color: rgb(175, 114, 114);
+}
+.donate-price-card-item:hover h2 {
+    color: white;
+  }
+
+
 /* SUBSCRIBE SECTION */
 .subscribe {
     text-align: center;
@@ -458,11 +477,9 @@ input:focus {
     cursor: pointer;
 }
 
-
-
 /* FOOTER SECTION */ 
 .footer {
-    background-color: #fff;
+    background-color: #fff !important;
     padding-top: 80px;
     padding-bottom: 80px;
 }
@@ -483,6 +500,7 @@ input:focus {
     padding-top: 32px;
 }
  hr {
+    border: 1px solid rgba(194, 194, 194, 0.272);
     max-width: 80%;
     margin: auto;
  }
